# ic-hack

./: .gitignore  README.md  get_coords.py  main.py  output.txt  pyproject.toml  test_court.py  test_vision.py  vision.py
backend/: .env.example  .gitignore  README.md  __init__.py  app.py  config.py  example_usage.py  requirements.txt  run.py  test_claude.py  test_server.py
data/: Ball.py  Coart.py  Coord.py  Court.py  Frame.py  FrameStack.py  Player.py  eventframe.py  frame.py  framestack.py  net.py  orderofevents.py
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/loading-page/: page.tsx
frontend/app/viewer/: page.tsx
frontend/components/: dev-navigation.tsx
frontend/components/ui/: slider.tsx
frontend/lib/: videoStorage.ts
logic/: Events.py  events.py  perspective.py  pipeline.py  test_normalisation.py
outputs/: commentary_script.txt  events.json
src/: main.py
src/data/: Ball.py  Coord.py  Court.py  Player.py  eventframe.py  frame.py  normalisedframe.py
src/logic/: events.py  pipeline.py
src/utils/: __init__.py  get_coords.py
src/vision/: __init__.py  core.py
src/voice/: __init__.py  audio.py  prompts.py  requirements.txt
tests/: __tests__.py  test_court.py  test_env.py  test_normalisation.py  test_vision.py
testwebsite/: index.html  script.js  style.css
voice/: audio.py  events.py  prompts.py  test_json_pipeline.py
