[project]
name = "ic-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.77.0",
    "elevenlabs>=2.33.1",
    "opencv-python>=4.13.0.90",
    "supervision>=0.27.0",
    "ultralytics>=8.4.9",
    "numpy>=2.0.0",
    "dotenv>=0.9.9",
]
