[project]
name = "ic-hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.77.0",
    "elevenlabs>=2.33.1",
    "opencv-python>=4.13.0.90",
    "supervision>=0.27.0",
    "ultralytics>=8.4.9",
    "numpy>=2.0.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "werkzeug>=3.1.3",
    "python-dotenv>=1.2.1",
    "pydub>=0.25.1",
]
